# dummy-service-fastvuln

./: LICENSE  README.md
.github/workflows/: enochecker_test.yml
checker/: Dockerfile  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml
service/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
